All required stories for Unit 2

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,5 +6,6 @@
         android:id="@+id/rvMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:transitionName="explode"
         android:background="#000000" />
 </RelativeLayout>
